# quasar

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/mips_engine/: instructions.rs  memory.rs  mod.rs  parser.rs  registers.rs  tests.rs
src/components/: AboutDialog.tsx  CodeEditor.tsx  Console.tsx  FileExplorer.tsx  HelpDialog.tsx  MemoryView.tsx  RegisterView.tsx  SettingsDialog.tsx
src/services/: configService.ts
src/theme/: defaults.ts  themeApplier.ts
