[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[profile.release]
panic = "abort" # Reduces binary size by removing unwinding code
codegen-units = 1 # Better optimization across the entire crate
lto = true # Link Time Optimization for maximum performance and size reduction
opt-level = "z" # Optimize for binary size
strip = true # Automatically strip symbols from the binary

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"
anyhow = "1.0"
thiserror = "1.0"

